--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Базовый JS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="top center">
+        <header class="header">
+            <h1 class="top__title">Добро пожаловать на мой сайт !</h1>
+            <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b> и
+                <b>приступай</b></p>
+            <button class="top__button">Поехали!</button>
+        </header>
+    </div>
+    <div class="game center">
+        <section class="game__box"> <a class="game__box_link" href="#"><img class="game__box_img" src="./img/game1.jpg" alt="Game 1"><p class="game__box_text">Игра 1</p></a></section>
+        <section class="game__box"> <a class="game__box_link" href="#"><img class="game__box_img" src="./img/game2.jpg" alt="Game 2"><p class="game__box_text">Игра 2</p></a></section>
+        <section class="game__box"> <a class="game__box_link" href="#"><img class="game__box_img" src="./img/game3.jpg" alt="Game 3"><p class="game__box_text">Игра 3</p></a></section>
+     </div>
 </body>
+
 </html>
